[elfish/on_sbcl]  Self-compiles. Undef and bool boxing.  Dispatch and misc fixes.  Slower. Doesn't quite compile the p5 version. [STD_red] Improved --format=cl string and nil dumping. [elf_h] Yet more missing argument fixes.
git-svn-id: http://svn.pugscode.org/pugs@22560 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/README
+++ b/misc/elfish/on_sbcl/README
@@ -68,3 +68,4 @@ NOTES
   # This remained 1x with general rw-ability added, still native integers.
   # This dropped to 1/2x with Int's.
   # This dropped to 1/4x while not being watched, for causes unknown.
+  # This dropped to 1/5x with boxed undef and booleans.
