typo fix in S02
git-svn-id: http://svn.pugscode.org/pugs@24043 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1565,7 +1565,7 @@ operator that is tighter than comma would appear to be topmost:
     ($x) = %hash{$x} :delete;
 
 (The situation does not often arise for the slice modifiers above
-because they are usually used in list context, which operators
+because they are usually used in list context, which operates
 at comma precedence.)
 
 =item *
