--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 17 Mar 2008
+  Last Modified: 11 Oct 2008
   Number: 6
-  Version: 94
+  Version: 95
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -1372,6 +1372,19 @@ you can get the same effect with:
     sub register ({:$name, :$addr, *%guest_data}, $room_num) {
         ...
     }
+
+Use of the curly form is not allowed where it might be confused with the
+following block's opening curly:
+
+    -> {:$name, :$addr, *%guest_data}, $room_num {	# WRONG
+
+However, as described in the next section, you can always use a
+sub-signature instead:
+
+    -> (:$name, :$addr, *%guest_data), $room_num {	# WRONG
+
+In fact, the [...] and {...} forms are really just extra documentation
+about what you expect.
 
 =head2 Unpacking tree node parameters
 
