copy/paste error, moritz++
git-svn-id: http://svn.pugscode.org/pugs@24045 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1381,7 +1381,7 @@ following block's opening curly:
 However, as described in the next section, you can always use a
 sub-signature instead:
 
-    -> (:$name, :$addr, *%guest_data), $room_num {	# WRONG
+    -> (:$name, :$addr, *%guest_data), $room_num {	# note ()'s
 
 In fact, the [...] and {...} forms are really just extra documentation
 about what you expect.
