delete ambiguous use of {...} for hash unpacking, just use sigs for that   (list unpacking may still be done with [...] for clarity) simplify parsing of expressions in conditionals to dwim on map/grep blocks   (you now need to parenthesize only on listops called with 0 args, like caller) define .pick on enumerable types, e.g. Day.pick clean out old instances of rand ARG, esp. where used as example of 0-or-1-ary revamp obsolete usages of exists
git-svn-id: http://svn.pugscode.org/pugs@24046 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 9 Oct 2008
+  Last Modified: 14 Oct 2008
   Number: 2
-  Version: 138
+  Version: 139
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1096,8 +1096,8 @@ types to act like an "and" junction:
 
     # Anything assigned to the variable $mitsy must conform
     # to the type Fish and either the Cat or Dog type...
-    my Cat|Dog Fish $mitsy = new Fish but { int rand 2 ?? .does Cat
-                                                       !! .does Dog };
+    my Cat|Dog Fish $mitsy = new Fish but { Bool.pick ?? .does Cat
+                                                      !! .does Dog };
 
 =head2 Parameter types
 
