be a little more true to the lyrics...
git-svn-id: http://svn.pugscode.org/pugs@24047 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -1805,7 +1805,7 @@ will return the months in random order.  Presumably
 might return a Royal Flush, but a Full House is much
 more likely.  It can never return Five Aces, since the pick
 is done without replacement.  (If it I<does> return Five Aces,
-it's time to walk away.)
+it's time to walk away.  Or maybe run.)
 
 =head1 Open vs Closed Classes
 
