[docs] small typo in Perl6::Perl5::Differences
git-svn-id: http://svn.pugscode.org/pugs@22628 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/Perl6/Perl5/Differences.pod
+++ b/docs/Perl6/Perl5/Differences.pod
@@ -127,7 +127,7 @@ Some highlights:
     Was:    qw(foo)
     Now:    <foo>
 
-    Was:    ("foo", (split /s+/, $bar), "bat")
+    Was:    ("foo", (split ' ', $bar), "bat")
     Now:    <<foo $bar bat>>
 
 Quoting operators now have modifiers that can be used with them (much like
