--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 9 Oct 2008
+  Last Modified: 16 Oct 2008
   Number: 3
-  Version: 143
+  Version: 144
 
 =head1 Overview
 
@@ -38,7 +38,7 @@ each level:
     L  Additive          + - +| +^ ~| ~^ ?| ?^
     L  Replication       x xx
     X  Concatenation     ~
-    X  Junctive and      & where
+    X  Junctive and      & also
     X  Junctive or       | ^
     L  Named unary       sleep abs sin
     N  Nonchaining infix but does <=> leg cmp .. ..^ ^.. ^..^
@@ -949,15 +949,15 @@ C<< infix:<&> >>, all() operator
 
 =item *
 
-C<< infix:<where> >>, sequential junctional and operator
+C<< infix:<also> >>, sequential junctional and operator
 
-    EXPR where EXPR where EXPR ...
+    EXPR also EXPR also EXPR ...
 
 Can be used to construct ANDed patterns with the same semantics as
 C<< infix:<&> >>, but with left-to-right evaluation guaranteed, for use
 in guarded patterns:
 
-    $target ~~ MyType where .mytest1 where .mytest2
+    $target ~~ MyType also .mytest1 also .mytest2
 
 This is useful when later tests might throw exceptions if earlier
 tests don't pass.  This cannot be guaranteed by:
